Use .isEmpty()